<resources>
    <string name="app_name">Series Fan</string>

    <string name="search_hint">Search</string>
    <string name="loading_text">loading…</string>
    <string name="schedule_text">Schedule:</string>
    <string name="genre_text">Genre:</string>
    <string name="resume_text">Resume:</string>
    <string name="episodes_text">Episodes:</string>

    <string name="season_data">Season %1$d</string>
    <string name="episode_data">Season %1$d, episode %2$d</string>
    <string name="episode_action_description">Ver detalhes do episodio</string>

    <string name="schedule_data">%1$s at %2$s</string>

    <string name="series_toolbar">Series</string>
    <string name="episode_toolbar">Episode</string>

    <string name="no_series_found">No series found</string>

    <string name="try_again">Try again</string>

    <string name="default_error_title">Unexpected error!</string>
    <string name="default_error_description">An unexpected error occurred, you may try again.</string>

    <string name="internet_error_title">Internet error!</string>
    <string name="internet_error_description">The network is unavailable, check your internet connection and try again.</string>

    <string name="back_navigation">Back to previous page</string>
</resources>