<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_error"
        android:tint="@color/crimson"
        android:layout_marginTop="@dimen/spacing_default"
        android:layout_marginStart="@dimen/spacing_default"
        android:layout_marginEnd="@dimen/spacing_default"
        android:layout_marginBottom="@dimen/spacing_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.Heading"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_default"
        android:layout_marginEnd="@dimen/spacing_default"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/default_error_title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.Big"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_default"
        android:layout_marginEnd="@dimen/spacing_default"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/default_error_description"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Button.Filled"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/spacing_default" />

</androidx.constraintlayout.widget.ConstraintLayout>